--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>My first Heading</h1>
-<p>My first paragraph.</p>
+<h1>AUTOBIOGRAPHY</h1>
+<p>MY NAME IS SAGAR ROY.</p>
+<P>I LOVE EVERYTHING</P>
 </body>
 </html>
