--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head><title>Mr. Sagar Roy</title></head>
 <body>
 <h1>AUTOBIOGRAPHY</h1>
-<p>MY NAME IS SAGAR ROY.</p>
-<P>I LOVE EVERYTHING</P>
+<p>MY NAME IS SAGAR ROY</p>
+<p>I LOVE TO INTERACT WITH OTHERS FOR GATHERING COMMUNICATION & KNOWLEDGE</p>
+<p>THIS IS MY PICTURE</p>
+<img src="C:\Users\sagar\OneDrive\zoom meeting screenshots\LAVA PICTURES\MY PICS\IMG-20230503-WA0043.jpg" height="600" width="400">
 </body>
 </html>
