--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <h1>AUTOBIOGRAPHY</h1>
 <p>MY NAME IS SAGAR ROY</p>
 <p>I LOVE TO INTERACT WITH OTHERS FOR GATHERING COMMUNICATION & KNOWLEDGE</p>
-<p>THIS IS MY PICTURE</p>
-<img src="C:\Users\sagar\OneDrive\zoom meeting screenshots\LAVA PICTURES\MY PICS\IMG-20230503-WA0043.jpg" height="600" width="400">
+<p>THIS IS MY DREAM PLACE</p>
+<img src="C:\Users\sagar\OneDrive\Desktop" height="600" width="400">
 </body>
 </html>
